[package]
name = "vollmond"
version = "0.2.0"
authors = ["puppetmaster"]
edition = "2018"
#build = "build.rs"

[dependencies]
quad-snd = { git = "https://github.com/not-fl3/quad-snd", rev = "68691cf"  }
macroquad = { git = "https://github.com/not-fl3/macroquad", rev = "a7e39df"  }

[dependencies.miniquad]
version = "0.3.0-alpha.22"

#[dependencies.macroquad]
#path = "../macroquad"
#version = "0.3.0-alpha.12"

[dependencies.nanoserde]
#path = "../nanoserde"
version = "0.1.21"

[dependencies.keyframe]
version = "1.0.3"

[dependencies.keyframe_derive]
version = "1.0.0"

[profile.dev.package.'*']
opt-level = 3

#[profile.release]
#incremental = true
#lto = true

#[build]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]

#[build-dependencies]
#winres = "0.1"
#image = "0.22.5"
